# CpE476_demos

./: README.md
2020/minimal_robot_description/: CMakeLists.txt  package.xml
2021/BNO_055_Nano_Basic_AHRS_t3/: BNO_055_Nano_Basic_AHRS_t3.ino
2021/EncoderTest/: EncoderTest.ino
2021/ROS/: Readme.md
2021/TwoWheelLibrary/: TwoWheelRobot.cpp  TwoWheelRobot.h
2021F/: Readme.md
2021F/CpE476_INO/: motor_controller_V3.ino  motor_controller_diff_drive_2.ino  motor_controller_diff_drive_AFM.ino  motor_controller_v2.ino
2021F/DCMotorTest/: DCMotorTest.ino
2021F/EncoderTest/: EncoderTest.ino
2021F/PWMMotorControl_Square/: PWMMotorControl_Square.ino
2021F/PWMMotorControl_Start/: PWMMotorControl_Start.ino
2021F/encoderMotorRPM/: encoderMotorRPM.ino
2021F/tick_counter/: tick_counter.ino
2021F/tick_publisher/: tick_publisher.ino
2022/AdafruitDriver/: readme.md
2022/NOX/: platformio.ini
2022/ROS+HW/: Readme.md
2022/turtlesim_cleaner/: CMakeLists.txt  square.bag
2022ros_ws/: readme.md
2022ros_ws/hello_world/: CMakeLists.txt  package.xml
2022ros_ws/nox/: readme.md
2022ros_ws/rplidar/: readme.md
2022ros_ws/turtlesim_cleaner/: CMakeLists.txt  package.xml
2022ros_ws/urdf_tutorials/: readme.md
2022ros_ws/where_am_i/: CMakeLists.txt  LICENSE  README.md  package.xml
2023/9DOF_Demo/: 9DOF_Demo.ino  AK09918.cpp  AK09918.h  IMU.cpp  IMU.h  QMI8658.cpp  QMI8658.h
2023/INA219/: INA219.ino
2023/QMI8658_GetDataExample/: QMI8658_GetDataExample.ino
2023/SSD1306/: SSD1306.ino
2023/csi_camera/: working_with_imx219.md
2023/mobrob_ws/src/ros_class/creating_a_ros_library/: CMakeLists.txt  package.xml
2023/mobrob_ws/src/ros_class/turtle_ros_service/: CMakeLists.txt  package.xml
2023/mobrob_ws/src/ros_class/turtle_ros_service/launch/: turtle_ros_service.launch
2023/mobrob_ws/src/ros_class/turtle_ros_service/src/: improved_pubvel_toggle.cpp  pubvel_toggle_plus.cpp  spawn_turtle_plus.cpp
2023/mobrob_ws/src/ros_class/turtle_ros_service/srv/: Changespeed.srv
2023/nospeedget/: nospeedget.ino
2023/pwmServo/: pwmServo.ino
2023/python_files/: DD_Kinematics.ipynb
2023/ros_mobile_robot/: readme.md
2023/yahboom/: readme.md  rosmaster_V3.3.9.hex  working_with_joy.md
2024/Lecture5Rec/: main.c  mobile_robot.launch  readme.md
Arduino/Romi-NoRpi-Debug/: Romi-NoRpi-Debug.ino
Arduino/Romi32U4_Encoder_PID_Odometery/: Romi32U4_Encoder_PID_Odometery.ino
Arduino/Romi32U4_Encoder_PIDv1_Odometry/: Romi32U4_Encoder_PIDv1_Odometry.ino
Arduino/Romi32U4_Encoder_TimedPID_Odo_RPI/: Romi32U4_Encoder_TimedPID_Odo_RPI.ino
Arduino/Romi32U4_FaceUphill/: Romi32U4_FaceUphill.ino
Arduino/Romi32U4_MotorTest/: Romi32U4_MotorTest.ino
Arduino/Romi32U4_Motor_Keyboard/: Romi32U4_Motor_Keyboard.ino
Arduino/Romi32U4_Motor_SerialCntrl/: Romi32U4_Motor_SerialCntrl.ino
Arduino/Romi32U4_Odometer_Test/: Romi32U4_Odometer_Test.ino
Arduino/Romi32U4_PowerDetect/: Romi32U4_PowerDetect.ino
Arduino/Romi32U4_RC_read/: Romi32U4_RC_read.ino
Arduino/Romi32U4_RotationResist/: Romi32U4_RotationResist.ino
Arduino/Romi32U4_TestMotors/: Romi32U4_TestMotors.ino
Arduino/Timer_IRQ_Example/: Timer_IRQ_Example.ino
OpenCV_Tutorials/Smoothing by Gaussian/: CMakeLists.txt  SmoothbyGaussian.cpp
OpenCV_Tutorials/simple/: CMakeCache.txt  (+5 more)
ROS_Rover/: Romi-NoRpi-Debug_teleop.ino
ROS_tutorials/: Basic_tutorials.txt  Install_Kinect_Gazebo.txt  avr_dude_CLI.txt  install_ros_lib.txt  install_rosserial.txt
(+271 files in other folders)
